# snippet

./: .gitignore
arg-parse/: parsetest.py
bash-scripts/: pdf_count_pages.sh
basic-config/: tmux.conf
bresenham/: bresenham_generator.py  bresenham_line.py  bresenham_main.py
concurrent-examples/: ray-1.py
cpp-base/: hello.cpp  makefile  pointer-reference.out
cursive-writer/: .gitignore  setup.py
desktop-changer/: README.md  desktop_changer.sh  pyramids_creator.py  rand_changer.sh
dir-explore/: dir_explore.py
django-tutorial/: requirements.txt
download-wikitionary/: download_wikitionary.py
git-guide/: README.md
hough-parallel-lines/: README.md  analyze_laser_data.py  analyze_parallel_lines.py  create_laser_data.py  double_hough.py  hough_parallel.py  utils.py
hough-ransac/: analyze_laser_data.py  analyze_parallel_lines.py  hough_parallel.py
latex-book/: main.tex  preamble.sty  title.tex
latex-french/: duolingo_course.tex  template_test.tex  vim_duolingo.vim
latex-recipe/: prove.tex
line-drawer/: bresenham_generator.py  line_drawer_creator.py  (+2 more)
python/flask/microblog-poetry/: .flaskenv  README.md  pyproject.toml
python/flask/microblog-poetry/src/microblog_poetry/: __init__.py
python/flask/microblog-poetry/src/microblog_poetry/app/: __init__.py  livereload_app.py  routes.py
python/flask/microblog-poetry/src/microblog_poetry/app/templates/: base.html
python/flask/microblog-poetry/tests/: test_microblog_poetry.py
terminal-colors/waves-cpp/: CMakeLists.txt
terminal-colors/waves-cpp/include/: waver.h
terminal-colors/waves-cpp/src/: main.cpp  waver.cpp
(+967 files in other folders)
